# VRetina-Webserver

./: README.md  index.php  installedYumPackages.txt  request.php  vretina.sql
controllers/: indexController.php  requestController.php
getContours/: CMakeLists.txt  DisplayImage.cpp  GetContours.cpp  Makefile  spherePoint.cpp  spherePoint.h  transform.cpp  transform.h
html/: index.php  index2.php  request.php  test.php  upload.php
html/classes/: imageBundle.php  labelClasses.php
html/controllers/: indexController.php  requestController.php  uploadController.php
html/models/: indexModel.php  requestModel.php  uploadModel.php
html/views/: indexTemplate.html  indexView.php  requestTemplate.html  requestView.php  uploadView.php
images/: index.php
models/: indexModel.php
templates/: indexRowTemplate.html  labelTemplate.json  meshTemplate.json  requestJsonTemplate.json  template.html  triangleTemplate.json  uploadLabelTemplate.html  uploadTemplate.html  vertexTemplate.json
tests/: test0.php  test1.php  test2.php
views/: indexRowTemplate.html  indexView.php  requestView.php
