cmake_minimum_required(VERSION 2.8)
project( GetContours )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} include)
add_library(SpherePoint spherePoint.cpp spherePoint.h)
add_library(Transform transform.cpp transform.h) 
add_executable( GetContours GetContours.cpp)
target_link_libraries( GetContours ${OpenCV_LIBS} SpherePoint Transform)
